[package]
name = "peregrine"
version = "0.0.0"
edition = "2018"
authors = ["J Wylie Cullick"]
publish = false



[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "master" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "master" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "master" }

ash = "0.30.0"
cgmath = "0.17"
gilrs = "0.7.2"
image = "0.22"
memoffset = "0.5.4"
multiinput = "0.0.15"
num = "0.2.1"
obj-rs = "0.5"
png = "0.15.0"
time = "0.1.38"
tobj = "0.1.12"
srtm = "0.1.1"
shaderc = "0.6.2"
notify = "4.0.15"
vk-sys = "0.5.1"
winit = "0.22"
winapi = "0.3.8"
